<resources>
    <string name="app_name">TestTask</string>
    <string name="check_bin_btn">Check_Bin</string>
    <string name="history_btn">History</string>
    <string name="input_bin">Enter the first digits of a card number</string>
    <string name="check_input_btn">CHECK BIN</string>
    <string name="SCHEME_NETWORK">SCHEME / NETWORK:</string>
    <string name="BRAND">BRAND:</string>
    <string name="CARD_NUMBER">CARD NUMBER:</string>
    <string name="LENGTH">LENGTH</string>
    <string name="LUHN">LUHN</string>
    <string name="TYPE">TYPE</string>
    <string name="PREPAID">PREPAID</string>
    <string name="COUNTRY">COUNTRY</string>
    <string name="BANK">BANK</string>
    <string name="delete">Delete All</string>
</resources>