<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/input_bin_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="12dp"
        android:inputType="number"
        android:hint="@string/input_bin"/>

    <Button
        android:id="@+id/check_input_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_bin_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/check_input_btn"/>

    <TextView
        android:id="@+id/scheme_network_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/check_input_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/SCHEME_NETWORK"
        />
    <TextView
        android:id="@+id/scheme_network_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scheme_network_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/brand_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scheme_network_answer_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/BRAND"/>
    <TextView
        android:id="@+id/brand_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/brand_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/card_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/brand_answer_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/CARD_NUMBER"/>
    <TextView
        android:id="@+id/length_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_number_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="2dp"
        android:layout_marginStart="8dp"
        android:text="@string/LENGTH"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/length_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/length_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="2dp"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_number_tv"
        app:layout_constraintStart_toEndOf="@id/length_tv"
        android:paddingTop="2dp"
        android:layout_marginStart="32dp"
        android:text="@string/LUHN"
        android:textSize="10sp"/>
    <TextView
        android:id="@+id/luhn_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/length_tv"
        app:layout_constraintStart_toEndOf="@id/length_answer_tv"
        android:paddingTop="2dp"
        android:layout_marginStart="55dp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/check_input_btn"
        app:layout_constraintStart_toEndOf="@id/scheme_network_tv"
        android:paddingTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/TYPE"/>
    <TextView
        android:id="@+id/type_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/type_tv"
        app:layout_constraintStart_toEndOf="@id/scheme_network_tv"
        android:paddingTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/prepaid_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/type_answer_tv"
        app:layout_constraintStart_toEndOf="@id/scheme_network_tv"
        android:paddingTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/PREPAID"/>
    <TextView
        android:id="@+id/prepaid_answer_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/prepaid_tv"
        app:layout_constraintStart_toEndOf="@id/scheme_network_tv"
        android:paddingTop="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/country_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/prepaid_answer_tv"
        app:layout_constraintStart_toEndOf="@id/scheme_network_tv"
        android:paddingTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/COUNTRY"/>
    <TextView
        android:id="@+id/emoji_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/country_tv"
        app:layout_constraintStart_toEndOf="@id/scheme_network_tv"
        android:paddingTop="2dp"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/country_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/country_tv"
        app:layout_constraintStart_toEndOf="@id/emoji_tv"
        android:paddingTop="2dp"
        android:layout_marginStart="6dp"
        android:textSize="12sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bank_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/BANK"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/length_answer_tv" />

    <TextView
        android:id="@+id/bank_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="2dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_tv"
        android:textSize="10sp"/>

    <TextView
        android:id="@+id/bank_city_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="2dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_name_tv" />

    <TextView
        android:id="@+id/bank_url_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="2dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_city_tv" />

    <TextView
        android:id="@+id/bank_phone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="2dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bank_url_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>